syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "internal/metadata/pb";

message DetectionPoint {
  string id = 1;  
  string description = 2;  
  repeated Lane lanes = 3;
  map<string, string> properties = 4;  // Additional metadata properties as key-value pairs
  string geojson_shape = 5;  // GeoJSON representation of the shape (Point, LineString, Polygon, etc.)
  
  Coordinate coordinates = 6; // Optional - Represents the central point
  Position position = 7;  // Represents the central point (with x and y coordinates)

  google.protobuf.Timestamp created_at = 8;  // Corrected the field number to avoid conflict
  google.protobuf.Timestamp modified_at = 9; // Corrected the field number to avoid conflict
}

message Lane {
  string id = 1;
  string description = 2;  
  string index = 3;       // Maps to "id_of_lane" from the JSON
  map<string, string> properties = 4;  // Additional metadata properties as key-value pairs
  string geojson_shape = 5;  // GeoJSON representation of the shape (Point, LineString, Polygon, etc.)
  
  Coordinate coordinates = 6; // Optional - Represents the coordinates of the lane
  Position position = 7;  // Represents x and y (optional position)

  google.protobuf.Timestamp created_at = 8;  // Corrected the field number to avoid conflict
  google.protobuf.Timestamp modified_at = 9; // Corrected the field number to avoid conflict
}

message Coordinate {
  double longitude = 1;  // Represents the longitude
  double latitude = 2;   // Represents the latitude
}

message Position {
  double x = 1;  // Represents the x coordinate (for the position of the object)
  double y = 2;  // Represents the y coordinate (for the position of the object)
}
